--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,18 @@ p {
   background-color: var(--primary-color);
   color: #fff;
 }
+.hero-about {
+  padding: 160px 20px;
+}
+.hero-about h2 {
+  font-size: 18px;
+  font-family: var(--font-text);
+  font-weight: bold;
+}
+.about-section {
+  margin: 30px;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 56px;
@@ -59,4 +71,11 @@ h2 {
 }
 .hero {
   padding: 60px 50px;
+}
+.hero-about {
+  padding: 60px 50px;
+}
+.about-section {
+  text-align: center;
+  padding: 0;
 }
