--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,29 @@ font-family: 'Poppins', sans-serif;*/
 body {
   font-family: var(--font-text);
 }
+nav ul {
+  text-decoration: none;
+  list-style-type: none;
+  padding: 10px;
+  margin-top: 10px;
+}
+nav li {
+  display: inline;
+  margin: 0;
+  padding: 5px;
+}
+nav li.active a {
+  color: var(--primary-color);
+}
+ul li a {
+  text-decoration: none;
+  color: black;
+}
+ul li a:hover {
+  text-decoration: none;
+  color: var(--primary-color);
+  transition: all 150ms ease-in-out;
+}
 h1 {
   font-family: var(--font-fancy-heading);
   font-size: 66px;
@@ -25,6 +48,7 @@ h3 {
 p {
   line-height: 30px;
 }
+
 .hero {
   background-color: var(--second-color);
   text-align: center;
