--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,16 @@ footer .contact-box {
   border-radius: 10px;
   margin: 50px;
 }
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  border: 1px solid #ced4da;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 56px;
